new_tests/semantics/type/bad/066_ED1.cm

def WEEKS type = {MON='hi'}
